Actions
Bug #11391
closedkeyserv: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with NULL pointer:
In file included from /code/illumos-gate/proto/root_i386/usr/include/iso/stdio_iso.h:53:0, from /code/illumos-gate/proto/root_i386/usr/include/stdio.h:82, from chkey_common.c:26: chkey_common.c: In function 'update_ldap_attr': /code/illumos-gate/proto/root_i386/usr/include/sys/null.h:28:14: error: passing argument 5 of '__ns_ldap_addAttr' makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ chkey_common.c:684:15: note: in expansion of macro 'NULL' credp, NULL, &errorp); ^~~~ In file included from chkey_common.c:37:0: /code/illumos-gate/usr/src/lib/libsldap/common/ns_sldap.h:734:6: note: expected 'int' but argument is of type 'void *' int __ns_ldap_addAttr( ^~~~~~~~~~~~~~~~~ In file included from /code/illumos-gate/proto/root_i386/usr/include/iso/stdio_iso.h:53:0, from /code/illumos-gate/proto/root_i386/usr/include/stdio.h:82, from chkey_common.c:26: /code/illumos-gate/proto/root_i386/usr/include/sys/null.h:28:14: error: passing argument 5 of '__ns_ldap_repAttr' makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ chkey_common.c:688:15: note: in expansion of macro 'NULL' credp, NULL, &errorp); ^~~~ In file included from chkey_common.c:37:0: /code/illumos-gate/usr/src/lib/libsldap/common/ns_sldap.h:750:6: note: expected 'int' but argument is of type 'void *' int __ns_ldap_repAttr( ^~~~~~~~~~~~~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk almost 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit c77bf7778622780cbb6cd7b4e39f428948e33280
commit c77bf7778622780cbb6cd7b4e39f428948e33280 Author: Toomas Soome <tsoome@me.com> Date: 2019-07-22T16:17:08.000Z 11391 keyserv: NULL pointer errors Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions